--- a/CompleteAssement1/CompleteAssement1.csproj
+++ b/CompleteAssement1/CompleteAssement1.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Return.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +87,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\40_smith_wesson_8x_gunshot-mike-koenig.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\apps.58350.13510798884388011.5c354f20-f2b0-4392-8bb3-88d363caa6e0.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\images.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\download.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
